--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
 html{
-    height: 100%
+    height: 100%;
+    width: 810px;
 }
 body{
     margin: 0px;
-    min-width: 700px;
-    overflow: scroll;
-    height: inherit
+    min-width: 810px;
+    height: inherit;
+    font-family: sans-serif;
 }
 #header {
     border-bottom:solid 2px #f02323;
-    overflow: hidden;
-    min-width: 600px;
+
+    min-width: 810px;
     width: 100%;
     position: fixed;
     top: 0px;
@@ -101,8 +102,19 @@ form.filterForm {
 #genres{
     width: 160px;
     padding-top: 60px;
+    padding-right: 10px;
     height: inherit;
     border-right: thin solid pink;
+    position: fixed;
+    top: auto;
+    overflow: hidden;
+    
+    font-weight: normal;
+    color: black;
+    text-align: left;
+    
+    text-decoration: none;
+    text-transform: uppercase;
 }
 li{
     line-height: 1.9;
