--- a/style.css
+++ b/style.css
@@ -172,9 +172,9 @@ li{
 }
 
 
-#main_body {
+#mainpage {
     clear: both;
-    width:80%;
+    width:70%;
     padding-left: 60px;
     margin-top: 65px;
     float: right;
